<resources>
    <string name="app_name">Puri Tomat</string>
    <string name="title_home">Home</string>
    <string name="title_manajemen">Manajemen</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_data_kamar">List Data Kamar</string>
    <string name="title_data_menu">List Data Menu</string>
    <string name="title_data_laundry">List Data Laundry</string>
    <string name="title_data_others">List Data Others</string>
    <string name="tambah_data">Tambah</string>

    <!--Spinner-->
    <string name="spinner_category">Select Category</string>

    <!--string for home-->
    <string name="home_1">Terisi</string>
    <string name="home_2">Kosong</string>
    <string name="home_3">Booking</string>

    <!--string for manajemen-->
    <string name="manajemen_1">Data Kamar</string>
    <string name="manajemen_2">Data Menu</string>
    <string name="manajemen_3">Data Laundry</string>
    <string name="manajemen_4">Data yang Lain</string>

    <!--string for scanning-->
    <string name="et_scanning1">NIK</string>
    <string name="et_scanning2">Nama Lengkap</string>
    <string name="et_scanning3">Alamat</string>
    <string name="et_scanning4">No Hp</string>
    <string name="et_scanning5">Jumlah Kamar</string>

    <!--string for title dialog-->
    <string name="dialog_title_success">Success</string>
    <string name="dialog_title_failed">Failed</string>
    <string name="dialog_title_information">Information</string>

    <!--string for message dialog-->
    <string name="dialog_message_1">Sukses menyimpan data</string>
    <string name="dialog_message_2">Gagal menyimpan data</string>
    <string name="dialog_message_3">Apakah anda yakin akan menghapus data ini?</string>
    <string name="dialog_message_4">Data tidak boleh kosong</string>
    <string name="dialog_message_5">Server sedang mengalami masalah.</string>
    <string name="dialog_message_6">Username atau password salah</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
