<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CheckOutActivity">


    <ScrollView
        android:layout_above="@+id/btn_check_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:id="@+id/cv1"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Identitas tamu"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_NIK_Checkout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:enabled="false"
                            android:hint="@string/et_scanning1" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_nama_Checkout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:enabled="false"
                            android:hint="@string/et_scanning2" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_alamat_Checkout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:enabled="false"
                            android:hint="@string/et_scanning3" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:inputType="phone"
                            android:id="@+id/et_nohp_Checkout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:enabled="false"
                            android:hint="@string/et_scanning4" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_below="@+id/cv1"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="300dp">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Layanan"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ExpandableListView
                        android:id="@+id/exp_list_data_tipe_kamar"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_light"
        android:id="@+id/btn_check_out"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/White"
        android:text="Check Out"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>