<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    tools:context=".fragment.ManajemenFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/logo"
            android:src="@drawable/logo"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/judul_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />
        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/LightSeaGreen"
            android:layout_below="@+id/judul_fragment"
            android:layout_marginTop="20dp"
            android:id="@+id/cdManajemen1"
            app:cardCornerRadius="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:drawableStart="@drawable/ic_room_service_black_24dp"
                    android:textColor="@color/White"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manajemen_1" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/LightCoral"
            android:layout_below="@+id/cdManajemen1"
            android:layout_marginTop="20dp"
            android:id="@+id/cdManajemen2"
            app:cardCornerRadius="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:drawableStart="@drawable/ic_business_center_black_24dp"
                    android:textColor="@color/White"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manajemen_2" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/LightGreen"
            android:layout_below="@+id/cdManajemen2"
            android:layout_marginTop="20dp"
            android:id="@+id/cdManajemen3"
            app:cardCornerRadius="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:textColor="@color/White"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manajemen_3" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <Button
            android:layout_marginTop="20dp"
            android:layout_below="@+id/cdManajemen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/White"
            android:text="Logout"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>