<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    tools:context=".fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/logo"
            android:src="@drawable/logo"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <android.support.v7.widget.CardView
            android:layout_below="@+id/logo"
            android:layout_marginTop="20dp"
            android:id="@+id/cdHome1"
            app:cardCornerRadius="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_1" />
                <android.support.v7.widget.CardView
                    app:cardCornerRadius="10dp"
                    android:elevation="5dp"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:textSize="20sp"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_below="@+id/cdHome1"
            android:layout_marginTop="10dp"
            android:id="@+id/cdHome2"
            app:cardCornerRadius="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_2"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <android.support.v7.widget.CardView
                    app:cardCornerRadius="10dp"
                    android:elevation="5dp"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="1"
                            android:textSize="20sp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_below="@+id/cdHome2"
            android:layout_marginTop="10dp"
            android:id="@+id/cdHome3"
            app:cardCornerRadius="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_3"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <android.support.v7.widget.CardView
                    app:cardCornerRadius="10dp"
                    android:elevation="5dp"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="2"
                            android:textSize="20sp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.v7.widget.CardView>